add new page for the characters Ragnar and Bjorn
 Changes to be committed:
       new file:   images/Bjorn2.webp
       new file:   pages/bjorn.html
       modified:   pages/personajes.html
       new file:   pages/ragnar.html

Signed-off-by: juanGV20 <j99600@hotmail.com>

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -9,10 +9,10 @@
     <h1>Personajes</h1>
     <p>Estos son todos los personajes que aparecen en la serie Vikings:</p>
     <ul>
-        <li>Ragnar Lothbrok</li>
+        <li><a href="ragnar.html">Ragnar Lothbrok</a></li>
         <img src="../images/Ragnar.jpg" alt="Ragnar" height="180" width="120">
-        <li>Björn</li>
-        <img src="../images/Bjorn.jpg" alt="Ragnar" height="180" width="120">
+        <li><a href="../pages/bjorn.html">Björn</a></li>
+        <img src="../images/Bjorn.jpg" alt="Bjorn" height="180" width="120">
         <li>Lagertha</li>
         <img src="../images/Lagertha.jpg" alt="Ragnar" height="180" width="120">
         <li>Rollo</li>
